--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,7 @@ dependencies = [
     "crewai>=0.11.0",
     "streamlit>=1.32.0",
     "python-dotenv>=1.0.0",
-    "groq>=0.4.0",
-    "langchain-groq>=0.1.0",
+    "openai>=1.0.0",
     "python-pptx>=0.6.23",
     "PyPDF2>=3.0.0",
     "pandas>=2.2.0",
